Working with tests and no fat jar